# blog

./: .gitignore  about.html  about.markdown  about.rst  atom.xml  blog.cabal  blog.sublime-project  contact.html  contact.markdown  deploy.sh  feed.xml  index.html  stack.yaml
css/: default.css  spoiler.css  syntax.css
discussions/: ezyang-15-07-2016
posts/: 2015-08-12-spqr.html  2015-08-12-spqr.markdown  2015-10-07-rosa-rosa-rosam.html  2015-10-07-rosa-rosa-rosam.markdown  2015-11-28-carpe-diem.html  2015-11-28-carpe-diem.markdown  2015-12-07-tu-quoque.html  2015-12-07-tu-quoque.markdown  2016-06-12-hsoc-acceptance.html  2016-06-12-hsoc-acceptance.markdown  2016-06-22-hsoc-rts.html  2016-06-22-hsoc-rts.markdown  2016-07-20-hsoc-monitoring-library.html  2016-07-20-hsoc-monitoring-library.markdown  2016-09-11-hsoc-results.html  2016-09-11-hsoc-results.markdown  2016-10-22-ghcvm-minecraft-modding.html  2016-10-22-ghcvm-minecraft-modding.markdown
src/: site.hs
templates/: default.html  post-list.html  post.html
