name:                blog
version:             0.1.0.0
synopsis:            Development blog of mine
description:         Please see README.md
homepage:            https://github.com/ncrashed/blog
license:             Apache
license-file:        LICENSE
author:              NCrashed
maintainer:          ncrashed@gmail.com
copyright:           2016 Anton Gushcha
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable blog
  hs-source-dirs:      src
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:      -threaded
  build-depends:       
      base >= 4.7 && < 5
    , hakyll >= 4.8
